Implementation of keycloak is done. Error hadling is not working as expected. Please have a look. If this comes off hold
